remove lombok lines